# CatSeedLogin-rust

./: Cargo.toml
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: init.rs  lib.rs
src/command/: Changepassword.rs  Register.rs  bindemail.rs  changepassword.rs  login.rs  mod.rs  register.rs  resetpassword.rs
src/event/: mod.rs
